docs : add authorization and get audit logs
